--- a/index.html
+++ b/index.html
@@ -16,6 +16,8 @@
     <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css" />
     <!-- ======== venobox css ======== -->
     <link rel="stylesheet" href="css/venobox.min.css">
+    <!-- ============ progress bar css ============ -->
+    <!-- <link rel="stylesheet" href="css/jquery.lineProgressbar.css"> -->
     <!-- ======= custom css ========== -->
     <link rel="stylesheet" href="css/style.css">
     <!-- ========= responsive css =========== -->
@@ -212,7 +214,6 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="about__card">
                         <div class="card__logo">
-
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h4 class="card__heading">PSD to HTML</h4>
@@ -222,7 +223,6 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="about__card">
                         <div class="card__logo">
-
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h4 class="card__heading">Figma to HTML</h4>
@@ -232,7 +232,6 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="about__card">
                         <div class="card__logo">
-
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h4 class="card__heading">Fully Responsive</h4>
@@ -242,7 +241,6 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="about__card">
                         <div class="card__logo">
-
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h4 class="card__heading">Free Customization</h4>
@@ -252,7 +250,6 @@
                 <div class="col-12 col-md-6 col-lg-4">
                     <div class="about__card">
                         <div class="card__logo">
-
                             <i class="fa-brands fa-css3-alt"></i>
                         </div>
                         <h4 class="card__heading">Delivery on time</h4>
@@ -443,7 +440,6 @@
                         Resume</h2>
                 </div>
             </div>
-
             <div class="row g-5 resume__area">
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="row">
@@ -549,7 +545,7 @@
                     <div class="common__hading__underline"></div>
                 </div>
             </div>
-            <div class="row row-gap-5">
+            <div class="row row-gap-5 pb-md-5">
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
                         <div class="skill__bg" style="width: 90%;">
@@ -591,7 +587,7 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg" style="width: 80%;">
+                        <div id="skill_jquery" class="skill__bg" style="width: 80%;">
                         </div>
                         <div class="skill__text" style="width: 80%;">
                             <p>jQuery</p>
@@ -663,7 +659,7 @@
                 </div>
             </div>
             <!-- ========= portfolio gallery ======== -->
-            <div class="row row-gap-3 mixitup">
+            <div class="row row-gap-4 mixitup">
                 <div class="mix design col-12 col-sm-6 col-lg-4">
                     <a href="#" class="potfolio__img__main">
                         <div class="portfolio__img">
@@ -863,18 +859,18 @@
             </div>
 
             <div class="row">
-                <div class="col-lg-7">
+                <div class="col-12 col-md-6">
                     <h5 class="form__heading mb-4">Message Me</h5>
                     <div class="form">
                         <form action="" method="post">
                             <div class="row mb-3">
-                                <div class="col-12 col-md-6 col-lg-6 contact__name">
+                                <div class="col-12 col-lg-6 contact__name">
                                     <input type="text" placeholder="Name" class="form-control name">
                                     <div class="error">
                                         <p class="error__msg name__err"></p>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-6 col-lg-6">
+                                <div class="col-12 col-lg-6">
                                     <input type="text" placeholder="Email" class="form-control email">
                                     <div class="error">
                                         <p class="error__msg mail__err"></p>
@@ -905,7 +901,7 @@
                         </form>
                     </div>
                 </div>
-                <div class="col-lg-5">
+                <div class="col-12 col-md-6">
                     <h5 class="form__heading mb-4">Message Me</h5>
                     <p class="form__para">
                         Always available for freelance work if the right project comes along, Feel free to contact me!
@@ -977,6 +973,8 @@
     <script src="https://unpkg.com/typed.js@2.0.16/dist/typed.umd.js"></script>
     <!-- ======= smtp js ========= -->
     <script src="https://smtpjs.com/v3/smtp.js"></script>
+    <!-- ======= progress bar js ============= -->
+    <!-- <script src="js/jquery.lineProgressbar.js"></script> -->
     <!-- ========= custom js ============== -->
     <script src="js/script.js"></script>
 </body>
