--- a/index.html
+++ b/index.html
@@ -530,7 +530,7 @@
                         <div class="col-lg-12 resume__items p-0">
                             <div class="resume__card">
                                 <h5 class="resume__card__heading">Web
-                                    Desinger</h5>
+                                    Desinger/React Developer</h5>
                                 <p class="resume__card__details">Not yet
                                     working any office</p>
                                 <p class="resume__description">I'm now
@@ -582,11 +582,11 @@
                 </div>
                 <div class="col-12 col-md-6 col-lg-6">
                     <div class="skill__main">
-                        <div class="skill__bg" style="width: 30%;">
+                        <div class="skill__bg" style="width: 60%;">
                         </div>
-                        <div class="skill__text" style="width: 30%;">
+                        <div class="skill__text" style="width: 60%;">
                             <p>JS</p>
-                            <p>30%</p>
+                            <p>60%</p>
                         </div>
                     </div>
                 </div>
@@ -607,6 +607,15 @@
                         <div class="skill__text" style="width: 60%;">
                             <p>SASS</p>
                             <p>60%</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-12 col-md-6 col-lg-6">
+                    <div class="skill__main">
+                        <div class="skill__bg" style="width: 80%;"></div>
+                        <div class="skill__text" style="width: 80%;">
+                            <p>React JS</p>
+                            <p>80%</p>
                         </div>
                     </div>
                 </div>
@@ -657,8 +666,8 @@
                 <div class="col-12 ">
                     <ul class="list__main  d-flex gap-4 justify-content-center text-white">
                         <li class="list__btn btn__active" data-filter="all">All</li>
-                        <li class="list__btn" data-filter=".responsive">Responsive</li>
-                        <li class="list__btn" data-filter=".notResponsive">Not Responsive</li>
+                        <li class="list__btn" data-filter=".responsive">HTML/CSS</li>
+                        <li class="list__btn" data-filter=".notResponsive">React</li>
                     </ul>
                 </div>
             </div>
